Fix surveys header text alignment

--- a/src/surveys/list/styles.scss
+++ b/src/surveys/list/styles.scss
@@ -16,7 +16,6 @@
 }
 
 .main-header.surveys {
-  padding-right: 40px;
   position: relative;
 
   #atlas-toggle {
